import React from 'react';
import { StyleSheet, Text, View } from 'react-native';
// REACT NATIVE APp starter code
export default function App() {
  return (
    <View style={styles.container}>
      <Text style={styles.title}>Campus Guide</Text>
      <Text style={styles.subtitle}>Concordia University Navigation App</Text>
    </View>
  );
}

const styles = StyleSheet.create({
...
