appId: host.exp.Exponent
---
- tapOn:
    id: "tab-next-class"
# NextClass can be empty or have upcoming classes depending current day/time.
- runFlow:
    when:
      visible: "No upcoming classes today"
    commands:
      - assertVisible: "View Schedule"
      - tapOn: "View Schedule"
      - waitForAnimationToEnd
      - extendedWaitUntil:
          visible: "My Schedule"
          timeout: 10000

- runFlow:
    when:
      visible: "Go to My Next Class"
    commands:
      - assertVisible: "Go to My Next Class"
